# AnonymiGraph

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  sphinx.yml
docs/: README.md  bug_tracker.md  conf.py  index.rst
notebooks/: default.ipynb  k_degree.ipynb  nest_model.ipynb  nest_model_variation.ipynb  presentation.ipynb  role_infused_partitions.ipynb  utilities.ipynb  utils_notebooks.py
notebooks/VariationNest/: convergence1.ipynb  convergence2.ipynb  directed_katz_convergence1.ipynb  eigenvector_convergence1.ipynb  greedy_algo_fast.ipynb  greedy_algo_fast.py  greedy_algo_inefficient.py  pagerank_convergence1.ipynb  pagerank_convergence1_directed_katz.ipynb  pagerank_convergence1_uncorrected.ipynb  quick_proofs.ipynb  variation_utils.py
notebooks/VariationNest/outdated/: pagerank_convergence1.ipynb
notebooks/WIP_notebooks/: bayesian_reidentification.ipynb
notebooks/abandoned/: VGAE2.ipynb
notebooks/notebook_utils/: __init__.py  get_graphs.py  report_utilities.py
notebooks/randcolorgraphs/: HepPH_network.ipynb  OLD_greedy_algo_fast.py  filmtrust_network.ipynb  greedy_algo_fast.py  new_fast_algo.ipynb  scale_to_1000.ipynb  scale_to_500_nodes.ipynb
notebooks/randcolorgraphs/utils/: brute_force.py  colour_refinement_out_neigh_algorithm.py
src/anonymigraph/: utils.py
src/anonymigraph/anonymization/: __init__.py  abstract_anonymizer.py  (+6 more)
src/python_package/: hello_world.py
tests/: test_methods.py
tools/: graph_explorer.py
(+65 files in other folders)
